<resources>
    <string name="app_name">Quiz Party</string>

    <string name="quiz_party">QUIZ PARTY</string>
    <string name="jugar">Jugar</string>
    <string name="quiz_party_header">QUIZ PARTY</string>
    <string name="preguntas">Nº de preguntas</string>
    <string name="menu_option_editar">Editar</string>
    <string name="menu_option_borrar">Borrar</string>
    <string name="opciones_modal">Opciones</string>
    <string name="editar_modal">Editar</string>
    <string name="borrar_modal">Borrar</string>
    <string name="elija_dificultad">Elija dificultad</string>
    <string name="dif_cil">Difícil</string>
    <string name="f_cil">Fácil</string>

    <string name="quedan">Quedan:</string>
    <string name="nuevo_quiz">NUEVO QUIZ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_del_quiz">Nombre del Quiz</string>
    <string name="definici_n_de_colores">Definición de colores</string>
    <string name="escriba_su_pregunta">Escriba su pregunta</string>
    <string name="escriba_su_respuesta">Escriba su respuesta</string>
    <string name="dialogTitle">¿Está seguro?</string>
    <string name="dialogMessage">Se borrarán todos los datos del Quiz</string>


</resources>
