<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opciones_modal"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:textColor="@color/grisLetra"/>

        <Button
            android:id="@+id/botonEditarModal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editar_modal"
            android:background="@color/trasparente"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/botonBorrarModal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/borrar_modal"
            android:background="@color/trasparente"
            android:textAllCaps="false" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>


