<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tarjeta"
    tools:context=".Views.nuevaPregunta">


    <android.support.constraint.Guideline
        android:id="@+id/guideline49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/iconoGuardarQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="guardarNuevaPregunta"
        android:background="@drawable/guardarblanco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline37" />

    <RadioGroup
        android:id="@+id/radioDificultad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:checkedButton="@+id/radioFacil"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioFacil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f_cil"
            android:textColor="@color/verdePregunta"
            android:buttonTint="@color/blancoFondo"
            android:layoutDirection="rtl"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <RadioButton
            android:id="@+id/radioDificil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dif_cil"
            android:textColor="@color/rosaPregunta"
            android:buttonTint="@color/blancoFondo"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:checkedButton="@id/radioNaranja"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline49"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline40">

        <RadioButton
            android:id="@+id/radioNaranja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tarjetanaranja"
            android:buttonTint="@color/blancoFondo"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <RadioButton
            android:id="@+id/radioVerde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tarjetaverde"
            android:buttonTint="@color/blancoFondo"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <RadioButton
            android:id="@+id/radioMarron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tarjetamarron"
            android:buttonTint="@color/blancoFondo"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <RadioButton
            android:id="@+id/radioAzul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tarjetaazul"
            android:buttonTint="@color/blancoFondo"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <RadioButton
            android:id="@+id/radioRosa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tarjetarosa"
            android:buttonTint="@color/blancoFondo"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <RadioButton
            android:id="@+id/radioAmarillo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tarjetaamarilla"
            android:buttonTint="@color/blancoFondo"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

    </RadioGroup>

    <EditText
        android:id="@+id/nuevaPreguntaQuestion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/tarjetablanca"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/escriba_su_pregunta"
        android:inputType="textMultiLine"
        android:lineSpacingMultiplier="1.1"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline51"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline52" />

    <EditText
        android:id="@+id/nuevaPreguntaAnswer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/tarjetablanca"
        android:ems="10"
        android:lineSpacingMultiplier="1.1"
        android:padding="16dp"
        android:gravity="start"
        android:hint="@string/escriba_su_respuesta"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/guideline37"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline51" />

    <TextView
        android:id="@+id/definicionColorQuestionEdit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/tarjetanaranja"
        android:gravity="center"
        android:textColor="@color/blancoFondo"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline52"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline49"
        tools:text="Anime" />


</android.support.constraint.ConstraintLayout>